Web Inspector: [Canvas] do not replace replay image with spinner icon https://bugs.webkit.org/show_bug.cgi?id=110213
Reviewed by Pavel Feldman.

Otherwise it's visually hard to see changes in the replay image. Instead show a small spinner icon in the bottom right corner.

* inspector/front-end/CanvasProfileView.js:
(WebInspector.CanvasProfileView):
(WebInspector.CanvasProfileView.prototype._enableWaitIcon):
* inspector/front-end/canvasProfiler.css:
(#canvas-replay-image-container):
(.canvas-debug-info):
(.canvas-spinner-icon):

Canonical link: https://commits.webkit.org/128512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@143325 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebCore/inspector/front-end/canvasProfiler.css
+++ b/Source/WebCore/inspector/front-end/canvasProfiler.css
@@ -41,7 +41,7 @@
     text-align: center;
     background-color: black;
     overflow: hidden;
-    padding: 5px;
+    padding: 5px 5px 10px 5px;
     color: white;
 }
 
@@ -55,13 +55,19 @@
     display: block;
 }
 
-.canvas-replay-image.wait {
-    content: url(Images/spinnerActiveSelected.gif);
-    zoom: inherit;
+.canvas-debug-info {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin: -16px 0 0 -16px;
+    left: 0;
+    right: 0;
+    bottom: 6px;
+}
+
+.canvas-spinner-icon {
+    content: url(Images/spinnerActiveSelected.gif);
+    position: absolute;
+    width: 16px;
+    right: 4px;
+    bottom: 4px;
 }
 
 .canvas-replay-log {
